k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eyego-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eyego-app
  template:
    metadata:
      labels:
        app: eyego-app
    spec:
      containers:
        - name: eyego-cont
          image: yousofkhaled/eyego-node-app:latest
          ports:
            - containerPort: 3000
