k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eyego-service
spec:
  type: ClusterIP
  selector:
    app: eyego-app
  ports:
    - port: 80
      targetPort: 3000
